--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "bcryptjs": "^2.2.0",
+    "handlebars": "^3.0.3",
     "mime": "^1.3.4",
     "monk": "^1.0.1",
     "mustache": "^2.1.2",
